--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                           <br>
                                           <div class=" float-end ">
                                                 <br>
-                                                <a class="connect-wallet-btn btn-sm" href="./maptest.html"
+                                                <a class="connect-wallet-btn btn-sm" href="./map.html"
                                                       target="_blank">Open the map</a>
                                                 <br>
 
